--- a/build.gradle
+++ b/build.gradle
@@ -109,10 +109,10 @@ repositories {
 
 dependencies {
     minecraft group: 'net.minecraftforge', name: 'forge', version: "${minecraft_version}-${forge_version}"
-    implementation fg.deobf("curse.maven:cobblemon-687131:${cobblemon_fileid}")
-    implementation fg.deobf("curse.maven:architectury-419699:${architectury_api_fileid}")
-    implementation fg.deobf("curse.maven:kotlin-351264:${kotlin_for_forge_fileid}")
-    implementation fg.deobf("curse.maven:tan-246391:${tough_as_nails_fileid}")
+    implementation fg.deobf("curse.maven:cobblemon-687131:${cobblemon_file}")
+    implementation fg.deobf("curse.maven:architectury-419699:${architectury_file}")
+    implementation fg.deobf("curse.maven:kotlin-351264:${kotlin_file}")
+    implementation fg.deobf("curse.maven:tan-246391:${tan_file}")
     implementation group: 'org.spongepowered', name: 'mixin', version: "${mixin_version}"
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
     testAnnotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
